--- a/core/res/res/values/styles_material.xml
+++ b/core/res/res/values/styles_material.xml
@@ -657,8 +657,8 @@ please see styles_device_defaults.xml.
     </style>
 
     <style name="Widget.Material.CompoundButton.Switch">
-        <item name="track">@drawable/switch_track_material</item>
-        <item name="thumb">@drawable/switch_thumb_material_anim</item>
+        <item name="track">@drawable/e_switch_track</item>
+        <item name="thumb">@drawable/e_switch_thumb</item>
         <item name="switchTextAppearance">@style/TextAppearance.Material.Widget.Switch</item>
         <item name="textOn">@string/capital_on</item>
         <item name="textOff">@string/capital_off</item>
